(lang dune 3.11)

(using menhir 2.1)

(name advent_of_code_2023)

(generate_opam_files true)

(source
 (github Zeta611/advent_of_code_2023))

(authors "Jay Lee")

(maintainers "Jay Lee")

(license LICENSE)

(package
 (name advent_of_code_2023)
 (synopsis "Advent of Code 2023")
 (description "Advent of Code 2023")
 (depends ocaml dune)
 (tags ("advent of code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
